--- a/metrix-doc-vecs-reading.cabal
+++ b/metrix-doc-vecs-reading.cabal
@@ -27,3 +27,21 @@ library
     metrix-nlp-data,
     potoki,
     rerebase
+
+test-suite test-sample-1
+  type: 
+    exitcode-stdio-1.0
+  hs-source-dirs:
+    test-sample-1
+  main-is:
+    Main.hs
+  ghc-options:
+    -O2 -threaded "-with-rtsopts=-N"
+  default-extensions:
+    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, Strict, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
+  default-language:
+    Haskell2010
+  build-depends:
+    metrix-doc-vecs-reading,
+    metrix-nlp-data,
+    rerebase
