--- a/metrix-doc-vecs-reading.cabal
+++ b/metrix-doc-vecs-reading.cabal
@@ -1,7 +1,7 @@
 name:
   metrix-doc-vecs-reading
 version:
-  0.1
+  0.2
 build-type:
   Simple
 cabal-version:
@@ -18,6 +18,7 @@ library
     Metrix.DocVecsReading.IO
   other-modules:
     Metrix.DocVecsReading.Attoparsec
+    Metrix.DocVecsReading.Foldl
     Metrix.DocVecsReading.Prelude
   build-depends:
     attoparsec,
@@ -44,4 +45,5 @@ test-suite test-sample-1
   build-depends:
     metrix-doc-vecs-reading,
     metrix-nlp-data,
+    metrix-clickstream-data,
     rerebase
